date picker z-index fix

--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -4,6 +4,7 @@ div[numberbox="true"] {
   }
 }
 .DayPickerInput {
+  z-index: 2 !important;
   input {
     font: inherit;
     color: currentColor;
